# napari-organoid-analyzer

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.py
napari_organoid_analyzer/: __init__.py  _detection_classes.py  _orgacount.py  _utils.py  _widget.py  napari.yaml  session.py  settings.py
napari_organoid_analyzer/_SAMOS/: detection_head_model.py  losses.py  matcher.py  transformer_layers.py
napari_organoid_analyzer/_SAMOS/models/: detr_own_impl_model.py
napari_organoid_analyzer/_SAMOS/util/: box_ops_numpy.py
napari_organoid_analyzer/_tests/: test_reader.py  test_widget.py
napari_organoid_analyzer/_training/: __init__.py  architecture_manager.py  training_thread.py  training_widget.py
napari_organoid_analyzer/_training/builtin_architectures/AdaBoostClassifier/: __init__.py  main.py
napari_organoid_analyzer/_training/builtin_architectures/GaussianProcessClassifier/: __init__.py  main.py
napari_organoid_analyzer/_training/builtin_architectures/KNN/: __init__.py  main.py  requirements.txt
napari_organoid_analyzer/_training/builtin_architectures/MLPClassifier/: __init__.py  main.py
napari_organoid_analyzer/_training/builtin_architectures/MLPRegressor/: __init__.py  main.py  requirements.txt
napari_organoid_analyzer/_training/builtin_architectures/RandomForestClassifier/: __init__.py  main.py
napari_organoid_analyzer/_training/builtin_architectures/SVCClassifier/: __init__.py  main.py
napari_organoid_analyzer/_training/builtin_architectures/_example/: __init__.py  example_main.py  requirements.txt
napari_organoid_analyzer/_widgets/: annotation.py  dialogues.py
