[metadata]
name = napari-organoid-analyzer

author = Meleray # Mikhail Konov
author_email = mikhail.konov@tum.de
url = https://github.com/Meleray/napari-organoid-analyzer
license = MIT
description = A plugin for detecting and analyzing organoids in 2D biomedical images.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/Meleray/napari-organoid-analyzer/issues
    Documentation = https://github.com/Meleray/napari-organoid-analyzer#README.md
    Source Code = https://github.com/Meleray/napari-organoid-analyzer
    User Support = https://github.com/Meleray/napari-organoid-analyzer/issues

[options]
packages = 
    napari_organoid_analyzer
include_package_data = True
python_requires = >=3.9, <3.11
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari[all]>=0.4.17,<0.5.0
    napari-aicsimageio>=0.7.2
    torch>=2.3.1
    torchvision>=0.18.1
    openmim
    mmengine>=0.10.4
    mmdet>=3.3.0
    scipy>=1.12.0
    scikit-image>=0.20.0
    pandas>=2.2.3
    pytorch-lightning>=2.5.1
    matplotlib>=3.10.1
    omegaconf>=2.3.0


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5

[options.package_data]
* = *.yaml

[options.entry_points] 
napari.manifest = 
    napari-organoid-analyzer = napari_organoid_analyzer:napari.yaml
