[metadata]
name = napari-organoid-analyzer

author = Meleray # Mikhail Konov
author_email = mikhail.konov@tum.de
url = https://github.com/Meleray/napari-organoid-analyzer
license = MIT
description = A plugin for detecting and analyzing organoids in 2D biomedical images.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/Meleray/napari-organoid-analyzer/issues
    Documentation = https://github.com/Meleray/napari-organoid-analyzer#README.md
    Source Code = https://github.com/Meleray/napari-organoid-analyzer
    User Support = https://github.com/Meleray/napari-organoid-analyzer/issues

[options]
packages = 
    napari_organoid_analyzer
include_package_data = True
python_requires = >=3.9

# setup_requires = setuptools_scm

# add your package requirements here
install_requires =
    napari[all]==0.4.19
    napari-aicsimageio==0.7.2
    torch==2.1.2
    torchvision==0.16.2
    openmim
    scipy==1.13.1
    scikit-image==0.20.0
    pandas>=2.2.3
    pytorch-lightning==2.5.1
    matplotlib>=3.9.4
    omegaconf>=2.3.0
    trackpy>=0.3.4
    opencv-python==4.10.0.82


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5

[options.package_data]
* = *.yaml

[options.entry_points] 
napari.manifest = 
    napari-organoid-analyzer = napari_organoid_analyzer:napari.yaml