[metadata]
name = napari-organoid-analyzer

author = Meleray # Mikhail Konov
author_email = mikhail.konov@tum.de
url = https://github.com/Meleray/napari-organoid-analyzer
license = MIT
description = A plugin for detecting and analyzing organoids in 2D biomedical images.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/Meleray/napari-organoid-analyzer/issues
    Documentation = https://github.com/Meleray/napari-organoid-analyzer#README.md
    Source Code = https://github.com/Meleray/napari-organoid-analyzer
    User Support = https://github.com/Meleray/napari-organoid-analyzer/issues

[options]
packages = 
    napari_organoid_analyzer
include_package_data = True
python_requires = >=3.9

# setup_requires = setuptools_scm

# add your package requirements here
install_requires =
    # For Windows
    napari[all];platform_system=='Windows'
    aicsimageio;platform_system=='Windows'
    torch>=2.1.2;platform_system=='Windows'
    torchvision>=0.16.2;platform_system=='Windows'
    openmim;platform_system=='Windows'
    scipy;platform_system=='Windows'
    scikit-image;platform_system=='Windows'
    pandas;platform_system=='Windows'
    pytorch-lightning>=2.5.1;platform_system=='Windows'
    matplotlib;platform_system=='Windows'
    omegaconf;platform_system=='Windows'
    trackpy;platform_system=='Windows'
    opencv-python-headless;platform_system=='Windows'
    tifffile>=2023.3.15;platform_system=='Windows'
    aicspylibczi>=3.0.0;platform_system=='Windows'
    
    # For other OS
    napari[all]==0.4.19;platform_system!='Windows'
    napari-aicsimageio==0.7.2;platform_system!='Windows'
    torch==2.1.2;platform_system!='Windows'
    torchvision==0.16.2;platform_system!='Windows'
    openmim;platform_system!='Windows'
    scipy==1.13.1;platform_system!='Windows'
    scikit-image==0.20.0;platform_system!='Windows'
    pandas>=2.2.3;platform_system!='Windows'
    pytorch-lightning==2.5.1;platform_system!='Windows'
    matplotlib>=3.9.4;platform_system!='Windows'
    omegaconf>=2.3.0;platform_system!='Windows'
    trackpy>=0.3.4;platform_system!='Windows'
    opencv-python==4.10.0.82;platform_system!='Windows'


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5

[options.package_data]
* = *.yaml

[options.entry_points] 
napari.manifest = 
    napari-organoid-analyzer = napari_organoid_analyzer:napari.yaml